[package]
name = "tama"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
thiserror = { version = "1.0.34" }
reqwest = { version = "0.11.11", features = ["blocking", "rustls-tls", "multipart"] }
regex = { version = "1.6.0" }
once_cell = { version = "1.14.0" }
